--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,23 @@
 image: maven:latest
 
 variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
   MAVEN_CLI_OPTS: "-f ./sigeh"
+
+cache:
+  paths:
+    - .m2/repository
 
 construir:
   stage: build
   script:
     - mvn $MAVEN_CLI_OPTS compile
+  artifacts:
+    paths:
+      - sigeh/target/
+
  
 testar:
   stage: test
   script:
-    - mvn $MAVEN_CLI_OPTS test
+    - mvn $MAVEN_CLI_OPTS org.apache.maven.plugins:maven-compiler-plugin:3.1:testCompile surefire:test
