--- a/sigeh/pom.xml
+++ b/sigeh/pom.xml
@@ -31,16 +31,23 @@
 		</dependency>
 
 	</dependencies>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>ftp-server</id>
 			<url>ftp://${env.DRIVEHQ_USERNAME}:${env.DRIVEHQ_PASSWORD}@ftp.drivehq.com</url>
 		</repository>
 	</distributionManagement>
-	
+
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+			</extension>
+		</extensions>
+
 		<finalName>SIGEH</finalName>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
